fix z-index on viewer

--- a/collective/documentviewer/resources/stylesheets/viewer.css
+++ b/collective/documentviewer/resources/stylesheets/viewer.css
@@ -16,3 +16,7 @@
 .not-fullscreen .close-fullscreen{
   display:none;
 }
+
+#DV-container {
+    z-index: 0;
+}
